--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="./main.css"> 
-    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=6acb9a747786657107520cd2a242bde2"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=2.0&ak=6acb9a747786657107520cd2a242bde2"></script>
   </head>
   <body>
     <div id="map"></div>
